[package]
name = "piper-redb"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "tokio_rt", "async"] }
napi-derive = "2"
redb = "2.0"
tokio = { version = "1", features = ["full"] }
zstd = "0.13"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"